welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:11: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      while(!isFacingTrail()) {
                          ^