welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
    // Write your code here
  while(!estSurBiscuit()) {
    if (isFacingTrail(c)) {
      baisseBrosse()
      avance()
      leveBrosse
    }
    else {
      while(!isFacingTrail()) {
        gauche()
      }
    }
  }
  prendBiscuit()
}

def isFacingTrail(c:Color):Boolean = {
  if (estFaceMur()) return false
  else {
    var couleur=false
    avance()
    if (getCouleurSol()==c) couleur= true
    recule()
    return couleur
  }
}